<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_filter">Filter</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="filterHeader">Filters</string>
    <string name="sortOrder">Sort Order</string>
    <string name="beginDate">Begin Date</string>
    <string name="newsDeskLabel">News Desk</string>
    <string name="newsDeskArt">Art</string>
    <string name="newsDeskFashion"><![CDATA[Fashion & Style]]></string>
    <string name="newsDeskSports">Sports</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>
