<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvFilterHeader"
        android:text="@string/filterHeader"
        style="@style/fragmentHeader" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFilterHeader"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="50dp" >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/beginDate"
            app:backgroundTint="@color/border" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txOrderLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilDate"
        android:text="@string/sortOrder"
        style="@style/label" />

    <Spinner
        android:id="@+id/sSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txOrderLabel"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:padding="10dp"
        android:entries="@array/sort_order"
        android:background="@drawable/spinner_background" />

    <TextView
        android:id="@+id/txNewsDeskLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sSort"
        android:text="@string/newsDeskLabel"
        style="@style/label" />

    <LinearLayout
        android:id="@+id/llNewsDesk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txNewsDeskLabel"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cbNewsArts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsDeskArt" />

        <CheckBox
            android:id="@+id/cbNewsFashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsDeskFashion" />

        <CheckBox
            android:id="@+id/cbNewsSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsDeskSports" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llNewsDesk">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            style="@style/negativeButton.halfWidth"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/save"
            style="@style/positiveButton.halfWidth"/>
    </LinearLayout>
</RelativeLayout>